Prepare upgrade to JUnit Platform 1.1.0-M2